data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2181.wast
;; 1. **Test 1: Mismatched Label Arity in Loops**    - **Description**: Create a loop containing a `br_table` instruction with labels of differing arity. The loop should be configured to run indefinitely due to an internal condition on `br_if` that always evaluates to true.    - **Constraint**: This test checks for the strict enforcement of consistent label arity.     - **Infinite Loop Relation**: Improper handling of the arity mismatch can prevent the loop from exiting correctly, leading to an infinite loop.

(assert_invalid
  (module
    (func $mismatched-label-arity-loops
      (loop (result i32)
        (block (result i32)
          (br_table 0 0 1 (i32.const 1)) (i32.const 0)
        )
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)